# jira-scrum-master-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  MIGRATION_NOTES.md  README.md  SETUP_INSTRUCTIONS.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: ARCHITECTURE.md  architecture.puml
src/beeai_agents/: __init__.py  agent.py
tests/: test_agent.py
