[project]
name = "beeai-jira-scrum-master"
version = "2.0.0"
description = "AI Scrum Master with BeeAI Framework and Jira MCP integration"
authors = [
    {name = "Matfej", email = "matfej@example.com"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11,<4.0"

dependencies = [
    # BeeAI Framework
    "beeai-framework>=0.1.42",
    
    # BeeAI SDK
    "beeai-sdk>=0.3.2",
    
    # MCP for Jira integration - FIXED DEPENDENCIES
    "mcp>=1.0.0",
    # Note: mcp-atlassian needs to be installed via uvx, not pip
    # Run: uvx install git+https://github.com/sooperset/mcp-atlassian.git
    
    # Core dependencies
    "python-dotenv>=1.1.1",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    
    # HTTP client
    "httpx>=0.28.1",
    
    # YAML support
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
server = "beeai_agents.agent:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beeai_agents"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=xml --cov-report=term"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
